🔧 update auth
